sample/retrieveUnpackaged/objects/FAQ__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>PortalKB_FAQ</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Content__c</fullName>
        <description>Main body for article content</description>
        <label>Article Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Purpose__c</fullName>
        <description>Used to define purpose of article and / or questions that likely to be answered by article</description>
        <label>Article Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attachment2__c</fullName>
        <description>The second attachment</description>
        <label>Attachment #2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <description>The third attachment</description>
        <label>Attachment #3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment4__c</fullName>
        <label>Attachment #4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Business_Priority__c</fullName>
        <inlineHelpText>1 – low
5 – high</inlineHelpText>
        <label>Business Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <description>Chat Answer displays information related to article. This can be the Article URL or Summary and can be pushed to the Chatlet window by the CSO User</description>
        <label>Chat Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Articles_Public_Site__c</fullName>
        <description>Related article links to be displayed on the Public Knowledge Base article view.</description>
        <label>Public Site Links</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <description>Identify other topics the customer / staff member may be interested in.</description>
        <inlineHelpText>Add name of articles that are linked to this one</inlineHelpText>
        <label>Related Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Articles_mySouthEastWater_Site__c</fullName>
        <description>Related article links to be displayed on the mySouthEastWater article view.</description>
        <label>mySouthEastWater Site Links</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resources_and_comments__c</fullName>
        <description>Used to identify reference material that may assist in creation / maintenance of the article.</description>
        <label>Resources and comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date article is next due to be reviewed.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <label>FAQ</label>
    <pluralLabel>FAQ</pluralLabel>
</CustomObject>